--- a/home.html
+++ b/home.html
@@ -16,7 +16,14 @@
         <li> <a href="home.html">HOME</a></li>
         <li> <a href="pot.html">portfolio</a></li>
         <li> <a href="vedio.html">MY vedio</a></li>
-        <li> <a href="index.html">FORM</a></li>
+        <li> <a href="index.html">FORM
+           <ul class="era" >
+             <li><a href="https://github.com/">link-1</a></li>
+             <li><a href="svg.html">link-2</a></li>
+             <li><a href="https://github.com/">link-3</a></li>
+             <li><a href="https://github.com/">link-4</a></li>
+           </ul>
+        </a></li>
        
     </ul>
   </nav>
